[tool.poetry]
name = "dpeter"
version = "0.1.0"
description = ""
authors = ["fursovia <fursov.ia@gmail.com>"]

[tool.poetry.scripts]
train = 'dpeter.commands.train:app'
tf_train = 'dpeter.commands.tf_train:app'
tf_predict = 'dpeter.commands.tf_predict:app'
create_dataset = 'dpeter.commands.create_dataset:app'

[tool.poetry.dependencies]
python = "^3.6.1"
allennlp = "==1.1.0"
allennlp_models = "==1.1.0"
python-Levenshtein = "^0.12.0"
jsonlines = "^1.2"
typer = "^0.3.2"
pandas = "^1.1.1"
dataclasses_json = "^0.5.2"
tabulate = "^0.8.7"
pre-commit = "^2.7.1"
opencv-python = "^4.4.0"
wandb = "^0.10.7"
torchvision = "^0.7.0"
editdistance = "^0.5.3"
ipdb = "^0.13.4"
tensorflow = "2.3.1"
kaldiio = "^2.17.0"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]
pytest = "5.3.1"
black = "^19.10b0"
mypy = "0.770"
flake8 = "^3.7.9"

[tool.black]
line-length = 119

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
